fix footnote overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -36,6 +36,10 @@ summary {
     cursor: pointer;
 }
 
+details p {
+    word-break: break-all;
+}
+
 section:has(.footnote-title) {
     margin-top: 3em;
 }
